@@ -1,6 +1,8 @@
 package io.intino.archetype;
 
 import io.intino.Configuration;
+import io.intino.alexandria.logger.Logger;
+import io.intino.archetype.utils.Version;
 import org.apache.commons.codec.binary.Base64;
 
 import java.io.ByteArrayOutputStream;
@@ -11,12 +13,12 @@ import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.function.Function;
 
 public class ArtifactoryConnector {
 	public static final String MAVEN_URL = "https://repo1.maven.org/maven2/";
 	public static final String INTINO_RELEASES = "https://artifactory.intino.io/artifactory/releases";
-
 
 	private static InputStream connect(URL url) {
 		try {
@@ -25,57 +27,12 @@ public class ArtifactoryConnector {
 			connection.setReadTimeout(2000);
 			return connection.getInputStream();
 		} catch (Throwable e) {
-			return null;
-		}
-	}
-
-	public static List<String> terminalVersions() {
-		try {
-			URL url = new URL(INTINO_RELEASES + "/io/intino/alexandria/terminal-jms/maven-metadata.xml");
-			return extractVersions(read(connect(url)).toString());
-		} catch (Throwable e) {
-			return Collections.emptyList();
-		}
-	}
-
-	public static List<String> ingestionVersions() {
-		try {
-			URL url = new URL(INTINO_RELEASES + "/io/intino/alexandria/ingestion/maven-metadata.xml");
-			return extractVersions(read(connect(url)).toString());
-		} catch (Throwable e) {
-			return Collections.emptyList();
-		}
-	}
-
-	public static List<String> eventVersions() {
-		try {
-			URL url = new URL(INTINO_RELEASES + "/io/intino/alexandria/event/maven-metadata.xml");
-			return extractVersions(read(connect(url)).toString());
-		} catch (Throwable e) {
-			return Collections.emptyList();
-		}
-	}
-
-	public static List<String> bpmVersions() {
-		try {
-			URL url = new URL(INTINO_RELEASES + "/io/intino/alexandria/bpm-framework/maven-metadata.xml");
-			return extractVersions(read(connect(url)).toString());
-		} catch (Throwable e) {
-			return Collections.emptyList();
+			return InputStream.nullInputStream();
 		}
 	}
 
 
-	public static List<String> ledVersions() {
-		try {
-			URL url = new URL(INTINO_RELEASES + "/io/intino/alexandria/led/maven-metadata.xml");
-			return extractVersions(read(connect(url)).toString());
-		} catch (Throwable e) {
-			return Collections.emptyList();
-		}
-	}
-
-	public static List<String> versions(Configuration.Repository repo, String artifact) {
+	public static List<Version> versions(Configuration.Repository repo, String artifact) {
 		try {
 			String spec = repo.url() + (repo.url().endsWith("/") ? "" : "/") + artifact.replace(":", "/").replace(".", "/") + "/maven-metadata.xml";
 			URL url = new URL(spec);
@@ -85,6 +42,7 @@ public class ArtifactoryConnector {
 		}
 		return Collections.emptyList();
 	}
+
 
 	private static InputStream connect(Configuration.Repository repository, URL url) {
 		try {
@@ -104,23 +62,28 @@ public class ArtifactoryConnector {
 		}
 	}
 
-	private static List<String> extractVersions(String metadata) {
+	private static List<Version> extractVersions(String metadata) {
 		if (!metadata.contains("<versions>")) return Collections.emptyList();
 		metadata = metadata.substring(metadata.indexOf("<versions>")).substring("<versions>".length() + 1);
 		metadata = metadata.substring(0, metadata.indexOf("</versions>"));
 		metadata = metadata.replace("<version>", "").replace("</version>", "");
-		return Arrays.stream(metadata.trim().split("\n")).map(String::trim).collect(Collectors.toList());
+		return Arrays.stream(metadata.trim().split("\n")).map(version()).filter(Objects::nonNull).toList();
+	}
+
+	private static Function<String, Version> version() {
+		return s -> {
+			try {
+				return new Version(s.trim());
+			} catch (IntinoException e) {
+				Logger.error(e);
+				return null;
+			}
+		};
 	}
 
 	private static ByteArrayOutputStream read(InputStream stream) throws Throwable {
-		ByteArrayOutputStream baos = new ByteArrayOutputStream();
-		if (stream == null) return baos;
-		try (stream) {
-			byte[] byteChunk = new byte[4096];
-			int n;
-			while ((n = stream.read(byteChunk)) > 0)
-				baos.write(byteChunk, 0, n);
-		}
+		ByteArrayOutputStream baos = new ByteArrayOutputStream(8192);
+		try (stream) {stream.transferTo(baos);}
 		return baos;
 	}
 }
